syntax = "proto3";

package qrcode;

option go_package = "proto;qrcode";

service Qrcode {
	rpc GetQrcode(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string content = 1;
	int32  size = 2;
	int32  format = 3;
}

message Response {
	string msg = 1;
	bytes  data = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
